--- a/TLCS/STL_settings.ini
+++ b/TLCS/STL_settings.ini
@@ -1,11 +1,11 @@
 [simulation]
 gui = False
-total_episodes = 1
+total_episodes = 5
 max_steps = 5400
 n_cars_generated = 1000
 green_duration = 10
 yellow_duration = 4
 
 [dir]
-models_path_name = models
+models_path_name = STL
 sumocfg_file_name = sumo_config.sumocfg
